--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
     <body>
         <h1>Space Invaders</h1>
-        <div id="score">Score: 0</div>
-        <div id="board"></div>
+
+        <div id="board" >
+            <div class="progress">
+                <p id="level">Level: 1</p>
+                <p id="score">Score: 0</p>
+                <p id="health">health: 3</p>
+            </div>
+        </div>
         <div id="gameOver" class="game-over">Game Over! Final Score: <span id="finalScore"></span></div>
     </body>
     
