--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <div id="gameOver" class="game-over">Game Over! Final Score: <span id="finalScore"></span></div>
+        <div id="levelStory"></div>
     </body>
     
 </html>
