--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         </div>
         <div id="pauseMenu" class="gameOverScreen">
             <h2>Game Paused</h2>
-            <button onclick="resumeGame()">Resume</button>
-            <button onclick="restartGame()">Restart</button>
+            <button onclick="resumeGame()">> Resume <</button>
+            <button onclick="restartGame()">> Restart <</button>
         </div>
-        <div id="gameOver" class="game-over">Game Over! Final Score: <span id="finalScore"></span></div>
         <div id="levelStory"></div>
+        <div id="gameOver" class="game-over">Game Over! Final Score: 
+            <span id="finalScore"></span><br>
+            <button onclick="restartGame()">> Restart <</button>
+        </div>
     </body>
     
 </html>
