--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Space Invaders</title>
         <link rel="stylesheet" href="space.css">
-        <script src="space.js"></script>
+        <link rel="icon" href="/media/favicon.ico" type="image/x-icon">
     </head>
 
     <body>
@@ -29,5 +29,5 @@
             <button onclick="restartGame()">> Restart <</button>
         </div>
     </body>
-    
+    <script src="space.js"></script>
 </html>
